--- a/flow.css
+++ b/flow.css
@@ -113,7 +113,7 @@
 .box {
     height: 100px;
     width: 100px;
-    background-image: url(material/jar.png);
+    background-image: url(./material/jar.png);
     background-size: 90px;
     background-repeat: no-repeat;
     background-position: 50% 50%;
