--- a/flow.css
+++ b/flow.css
@@ -37,18 +37,20 @@
 }
 
 #zhiqu_process {
-    width: calc(14vw);
+    width: calc(23vw);
     height: calc(60vh);
+    display: flex;
+    justify-content: flex-start;
 }
 
 #zhiqu_rprocess {
-    display: flex;
+
     width: calc(9vw);
     height: calc(60vh);
 }
 
 .zhiqu_step {
-    fill: rgb(217, 163, 88);
+    fill: rgb(255, 255, 255);
 }
 
 .tooltip {
@@ -61,6 +63,7 @@
     padding: 10px;
     text-align: center;
     opacity: 0;
+    max-width: 100px;
 }
 
 
@@ -187,13 +190,13 @@
 .longM,
 .line {
     fill: none;
-    stroke: #4a4a4a;
+    stroke: rgb(183, 179, 174);
     stroke-width: 1px;
 }
 
 .scircle {
     fill: #80d1c8;
-    stroke: #4a4a4a;
+    stroke: rgb(177, 173, 167);
 }
 
 .dot {
@@ -265,6 +268,23 @@
     stroke-width: 2px;
 }
 
+.chordCir {
+    z-index: 100;
+    fill: burlywood;
+    stroke: rgb(110, 78, 78);
+    stroke-width: 2px;
+}
+
+.chordCir circle {
+    transform-box: fill-box;
+    transform-origin: center center;
+    transition: scale 0.5s;
+}
+
+.chordDetail circle:hover {
+    scale: 1.5
+}
+
 @keyframes appear {
     0% {
         opacity: 0;
@@ -273,4 +293,33 @@
     100% {
         opacity: 1;
     }
+}
+
+/* 我加的 虽然前面也有改了的*/
+.zhiqu_dot {
+    transform-origin: center center;
+    transform-box: fill-box;
+    fill: rgb(175, 205, 185);
+
+}
+
+.zhiqu_line {
+    stroke: rgb(172, 199, 173);
+    stroke-width: 3px;
+}
+
+.zhiqu_dot.small {
+    transition: all .5s;
+}
+
+.zhiqu_dot.small:hover {
+    transform: scale(1.5);
+    stroke: #80d1c8;
+    fill: aliceblue;
+}
+
+.zhiqu_dot.small.selected {
+    transform: scale(1.5);
+    stroke: #80d1c8;
+    fill: aliceblue;
 }
